--- a/park-rest-api/src/main/resources/application-dev.properties
+++ b/park-rest-api/src/main/resources/application-dev.properties
@@ -1,13 +1,19 @@
+## server
+server.port=8081
+
 ## default connection pool
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
 ## PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.username=postgres
+spring.datasource.password=123
 
 #drop n create table again, good for testing, comment this in production
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 
+## disable security
+security.basic.enabled=false
+management.security.enabled=false
